Avoid menu row-break on small desktop

--- a/theme/static/style-desktop.css
+++ b/theme/static/style-desktop.css
@@ -19,7 +19,7 @@
     background: initial;
 
     display: inline-block;
-    margin-left: 3em;
+    margin-left: 1em;
 
     font-size: 110%;
 
